--- a/GeekShopping/GeekShopping.ProductAPI/appsettings.json
+++ b/GeekShopping/GeekShopping.ProductAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppDbConnectionString": "server=localhost;database=geekshopping;User=root;Password=1234;"
+  }
 }
